output/MiniJaJaParser.java
// $ANTLR null /home/frosqh/workspace/m1comp4/MiniJaJa.g 2018-10-03 12:45:39

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class MiniJaJaParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AFFECTATION", "APPELI", "BLOCK", 
		"BOOL", "CALL", "CLASSE", "COMMENT", "CST", "DECLS", "IDENT", "IDF", "ILCOMMENT", 
		"INCREMENT", "INSTRS", "INT", "LISTEXP", "METH", "NBRE", "PARAM", "RETOUR", 
		"SI", "SOMME", "TAB", "TABLEAU", "TANTQUE", "TYPE", "VAR", "VARS", "VEC", 
		"VIDE", "VOID", "WS", "'!'", "'&&'", "'('", "')'", "'*'", "'+'", "'++'", 
		"'+='", "','", "'-'", "'/'", "';'", "'='", "'=='", "'>'", "'['", "']'", 
		"'class'", "'else'", "'final'", "'if'", "'main'", "'return'", "'while'", 
		"'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int AFFECTATION=4;
	public static final int APPELI=5;
	public static final int BLOCK=6;
	public static final int BOOL=7;
	public static final int CALL=8;
	public static final int CLASSE=9;
	public static final int COMMENT=10;
	public static final int CST=11;
	public static final int DECLS=12;
	public static final int IDENT=13;
	public static final int IDF=14;
	public static final int ILCOMMENT=15;
	public static final int INCREMENT=16;
	public static final int INSTRS=17;
	public static final int INT=18;
	public static final int LISTEXP=19;
	public static final int METH=20;
	public static final int NBRE=21;
	public static final int PARAM=22;
	public static final int RETOUR=23;
	public static final int SI=24;
	public static final int SOMME=25;
	public static final int TAB=26;
	public static final int TABLEAU=27;
	public static final int TANTQUE=28;
	public static final int TYPE=29;
	public static final int VAR=30;
	public static final int VARS=31;
	public static final int VEC=32;
	public static final int VIDE=33;
	public static final int VOID=34;
	public static final int WS=35;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "vexp", "exp", "instrs", "vars", "exp1", "classe", "decls", 
		"decl", "listexp", "terme", "fichier", "methmain", "exp2", "varz", "instr", 
		"finalvar", "axiom", "ident", "ent", "type", "methode", "fact", "typemeth"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public MiniJaJaParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public MiniJaJaParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public MiniJaJaParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return MiniJaJaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/frosqh/workspace/m1comp4/MiniJaJa.g"; }


	public static class axiom_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "axiom"
	// /home/frosqh/workspace/m1comp4/MiniJaJa.g:37:1: axiom : fichier EOF -> fichier ;
	public final MiniJaJaParser.axiom_return axiom() throws RecognitionException {
		MiniJaJaParser.axiom_return retval = new MiniJaJaParser.axiom_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope fichier1 =null;

		CommonTree EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_fichier=new RewriteRuleSubtreeStream(adaptor,"rule fichier");

		try { dbg.enterRule(getGrammarFileName(), "axiom");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(37, 0);

		try {
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:37:7: ( fichier EOF -> fichier )
			dbg.enterAlt(1);

			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:37:9: fichier EOF
			{
			dbg.location(37,9);
			pushFollow(FOLLOW_fichier_in_axiom156);
			fichier1=fichier();
			state._fsp--;

			stream_fichier.add(fichier1.getTree());dbg.location(37,17);
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_axiom158);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: fichier
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 37:20: -> fichier
			{
				dbg.location(37,23);
				adaptor.addChild(root_0, stream_fichier.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(38, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "axiom");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "axiom"


	public static class fichier_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "fichier"
	// /home/frosqh/workspace/m1comp4/MiniJaJa.g:40:1: fichier : ( classe )* ;
	public final MiniJaJaParser.fichier_return fichier() throws RecognitionException {
		MiniJaJaParser.fichier_return retval = new MiniJaJaParser.fichier_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope classe3 =null;


		try { dbg.enterRule(getGrammarFileName(), "fichier");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(40, 0);

		try {
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:40:9: ( ( classe )* )
			dbg.enterAlt(1);

			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:40:11: ( classe )*
			{
			root_0 = (CommonTree)adaptor.nil();


			dbg.location(40,11);
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:40:11: ( classe )*
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==53) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/frosqh/workspace/m1comp4/MiniJaJa.g:40:11: classe
					{
					dbg.location(40,11);
					pushFollow(FOLLOW_classe_in_fichier170);
					classe3=classe();
					state._fsp--;

					adaptor.addChild(root_0, classe3.getTree());

					}
					break;

				default :
					break loop1;
				}
			}
			} finally {dbg.exitSubRule(1);}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(41, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "fichier");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "fichier"


	public static class classe_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "classe"
	// /home/frosqh/workspace/m1comp4/MiniJaJa.g:43:1: classe : 'class' ident '{' decls methmain '}' -> ^( CLASSE ident decls methmain ) ;
	public final MiniJaJaParser.classe_return classe() throws RecognitionException {
		MiniJaJaParser.classe_return retval = new MiniJaJaParser.classe_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal4=null;
		Token char_literal6=null;
		Token char_literal9=null;
		ParserRuleReturnScope ident5 =null;
		ParserRuleReturnScope decls7 =null;
		ParserRuleReturnScope methmain8 =null;

		CommonTree string_literal4_tree=null;
		CommonTree char_literal6_tree=null;
		CommonTree char_literal9_tree=null;
		RewriteRuleTokenStream stream_60=new RewriteRuleTokenStream(adaptor,"token 60");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
		RewriteRuleSubtreeStream stream_methmain=new RewriteRuleSubtreeStream(adaptor,"rule methmain");
		RewriteRuleSubtreeStream stream_ident=new RewriteRuleSubtreeStream(adaptor,"rule ident");
		RewriteRuleSubtreeStream stream_decls=new RewriteRuleSubtreeStream(adaptor,"rule decls");

		try { dbg.enterRule(getGrammarFileName(), "classe");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(43, 0);

		try {
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:43:8: ( 'class' ident '{' decls methmain '}' -> ^( CLASSE ident decls methmain ) )
			dbg.enterAlt(1);

			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:43:10: 'class' ident '{' decls methmain '}'
			{
			dbg.location(43,10);
			string_literal4=(Token)match(input,53,FOLLOW_53_in_classe181);  
			stream_53.add(string_literal4);
			dbg.location(43,18);
			pushFollow(FOLLOW_ident_in_classe183);
			ident5=ident();
			state._fsp--;

			stream_ident.add(ident5.getTree());dbg.location(43,24);
			char_literal6=(Token)match(input,60,FOLLOW_60_in_classe185);  
			stream_60.add(char_literal6);
			dbg.location(43,27);
			pushFollow(FOLLOW_decls_in_classe186);
			decls7=decls();
			state._fsp--;

			stream_decls.add(decls7.getTree());dbg.location(43,33);
			pushFollow(FOLLOW_methmain_in_classe188);
			methmain8=methmain();
			state._fsp--;

			stream_methmain.add(methmain8.getTree());dbg.location(43,41);
			char_literal9=(Token)match(input,62,FOLLOW_62_in_classe189);  
			stream_62.add(char_literal9);

			// AST REWRITE
			// elements: decls, ident, methmain
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 43:45: -> ^( CLASSE ident decls methmain )
			{
				dbg.location(43,48);
				// /home/frosqh/workspace/m1comp4/MiniJaJa.g:43:48: ^( CLASSE ident decls methmain )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				dbg.location(43,50);
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CLASSE, "CLASSE"), root_1);
				dbg.location(43,57);
				adaptor.addChild(root_1, stream_ident.nextTree());dbg.location(43,63);
				adaptor.addChild(root_1, stream_decls.nextTree());dbg.location(43,69);
				adaptor.addChild(root_1, stream_methmain.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(44, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "classe");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "classe"


	public static class ident_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "ident"
	// /home/frosqh/workspace/m1comp4/MiniJaJa.g:46:1: ident : IDF -> ^( IDENT IDF ) ;
	public final MiniJaJaParser.ident_return ident() throws RecognitionException {
		MiniJaJaParser.ident_return retval = new MiniJaJaParser.ident_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token IDF10=null;

		CommonTree IDF10_tree=null;
		RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");

		try { dbg.enterRule(getGrammarFileName(), "ident");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(46, 0);

		try {
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:46:7: ( IDF -> ^( IDENT IDF ) )
			dbg.enterAlt(1);

			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:46:9: IDF
			{
			dbg.location(46,9);
			IDF10=(Token)match(input,IDF,FOLLOW_IDF_in_ident210);  
			stream_IDF.add(IDF10);

			// AST REWRITE
			// elements: IDF
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 46:13: -> ^( IDENT IDF )
			{
				dbg.location(46,16);
				// /home/frosqh/workspace/m1comp4/MiniJaJa.g:46:16: ^( IDENT IDF )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				dbg.location(46,18);
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(IDENT, "IDENT"), root_1);
				dbg.location(46,24);
				adaptor.addChild(root_1, stream_IDF.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(47, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "ident");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "ident"


	public static class decls_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decls"
	// /home/frosqh/workspace/m1comp4/MiniJaJa.g:49:1: decls : ( decl ';' )* -> ^( DECLS ( decl )* ) ;
	public final MiniJaJaParser.decls_return decls() throws RecognitionException {
		MiniJaJaParser.decls_return retval = new MiniJaJaParser.decls_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal12=null;
		ParserRuleReturnScope decl11 =null;

		CommonTree char_literal12_tree=null;
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");

		try { dbg.enterRule(getGrammarFileName(), "decls");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(49, 0);

		try {
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:49:7: ( ( decl ';' )* -> ^( DECLS ( decl )* ) )
			dbg.enterAlt(1);

			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:49:9: ( decl ';' )*
			{
			dbg.location(49,9);
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:49:9: ( decl ';' )*
			try { dbg.enterSubRule(2);

			loop2:
			while (true) {
				int alt2=2;
				try { dbg.enterDecision(2, decisionCanBacktrack[2]);

				int LA2_0 = input.LA(1);
				if ( (LA2_0==TYPE||LA2_0==VOID||LA2_0==55) ) {
					alt2=1;
				}

				} finally {dbg.exitDecision(2);}

				switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/frosqh/workspace/m1comp4/MiniJaJa.g:49:10: decl ';'
					{
					dbg.location(49,10);
					pushFollow(FOLLOW_decl_in_decls228);
					decl11=decl();
					state._fsp--;

					stream_decl.add(decl11.getTree());dbg.location(49,15);
					char_literal12=(Token)match(input,47,FOLLOW_47_in_decls230);  
					stream_47.add(char_literal12);

					}
					break;

				default :
					break loop2;
				}
			}
			} finally {dbg.exitSubRule(2);}

			// AST REWRITE
			// elements: decl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 49:21: -> ^( DECLS ( decl )* )
			{
				dbg.location(49,24);
				// /home/frosqh/workspace/m1comp4/MiniJaJa.g:49:24: ^( DECLS ( decl )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				dbg.location(49,26);
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLS, "DECLS"), root_1);
				dbg.location(49,32);
				// /home/frosqh/workspace/m1comp4/MiniJaJa.g:49:32: ( decl )*
				while ( stream_decl.hasNext() ) {
					dbg.location(49,32);
					adaptor.addChild(root_1, stream_decl.nextTree());
				}
				stream_decl.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(50, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "decls");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "decls"


	public static class decl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:1: decl : ( typemeth ident ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) ) | finalvar );
	public final MiniJaJaParser.decl_return decl() throws RecognitionException {
		MiniJaJaParser.decl_return retval = new MiniJaJaParser.decl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal16=null;
		Token char_literal18=null;
		ParserRuleReturnScope typemeth13 =null;
		ParserRuleReturnScope ident14 =null;
		ParserRuleReturnScope vexp15 =null;
		ParserRuleReturnScope exp17 =null;
		ParserRuleReturnScope methode19 =null;
		ParserRuleReturnScope finalvar20 =null;

		CommonTree char_literal16_tree=null;
		CommonTree char_literal18_tree=null;
		RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleSubtreeStream stream_vexp=new RewriteRuleSubtreeStream(adaptor,"rule vexp");
		RewriteRuleSubtreeStream stream_methode=new RewriteRuleSubtreeStream(adaptor,"rule methode");
		RewriteRuleSubtreeStream stream_ident=new RewriteRuleSubtreeStream(adaptor,"rule ident");
		RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");
		RewriteRuleSubtreeStream stream_typemeth=new RewriteRuleSubtreeStream(adaptor,"rule typemeth");

		try { dbg.enterRule(getGrammarFileName(), "decl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(52, 0);

		try {
			// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:6: ( typemeth ident ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) ) | finalvar )
			int alt5=2;
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==TYPE||LA5_0==VOID) ) {
				alt5=1;
			}
			else if ( (LA5_0==55) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:8: typemeth ident ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) )
					{
					dbg.location(52,8);
					pushFollow(FOLLOW_typemeth_in_decl250);
					typemeth13=typemeth();
					state._fsp--;

					stream_typemeth.add(typemeth13.getTree());dbg.location(52,17);
					pushFollow(FOLLOW_ident_in_decl252);
					ident14=ident();
					state._fsp--;

					stream_ident.add(ident14.getTree());dbg.location(52,23);
					// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:23: ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) )
					int alt4=2;
					try { dbg.enterSubRule(4);
					try { dbg.enterDecision(4, decisionCanBacktrack[4]);

					int LA4_0 = input.LA(1);
					if ( ((LA4_0 >= 47 && LA4_0 <= 48)||LA4_0==51) ) {
						alt4=1;
					}
					else if ( (LA4_0==38) ) {
						alt4=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 4, 0, input);
						dbg.recognitionException(nvae);
						throw nvae;
					}

					} finally {dbg.exitDecision(4);}

					switch (alt4) {
						case 1 :
							dbg.enterAlt(1);

							// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:24: ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) )
							{
							dbg.location(52,24);
							// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:24: ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) )
							int alt3=2;
							try { dbg.enterSubRule(3);
							try { dbg.enterDecision(3, decisionCanBacktrack[3]);

							int LA3_0 = input.LA(1);
							if ( ((LA3_0 >= 47 && LA3_0 <= 48)) ) {
								alt3=1;
							}
							else if ( (LA3_0==51) ) {
								alt3=2;
							}

							else {
								NoViableAltException nvae =
									new NoViableAltException("", 3, 0, input);
								dbg.recognitionException(nvae);
								throw nvae;
							}

							} finally {dbg.exitDecision(3);}

							switch (alt3) {
								case 1 :
									dbg.enterAlt(1);

									// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:25: vexp
									{
									dbg.location(52,25);
									pushFollow(FOLLOW_vexp_in_decl256);
									vexp15=vexp();
									state._fsp--;

									stream_vexp.add(vexp15.getTree());
									// AST REWRITE
									// elements: ident, vexp, typemeth
									// token labels: 
									// rule labels: retval
									// token list labels: 
									// rule list labels: 
									// wildcard labels: 
									retval.tree = root_0;
									RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

									root_0 = (CommonTree)adaptor.nil();
									// 52:30: -> ^( VAR ident typemeth vexp )
									{
										dbg.location(52,33);
										// /home/frosqh/workspace/m1comp4/MiniJaJa.g:52:33: ^( VAR ident typemeth vexp )
										{
										CommonTree root_1 = (CommonTree)adaptor.nil();
										dbg.location(52,35);
										root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VAR, "VAR"), root_1);
										dbg.location(52,39);
										adaptor.addChild(root_1, stream_ident.nextTree());dbg.location(52,45);
										adaptor.addChild(root_1, stream_typemeth.nextTree());dbg.location(52,54);
										adaptor.addChild(root_1, stream_vexp.nextTree());
										adaptor.addChild(root_0, root_1);
										}

									}


									retval.tree = root_0;

									}
									break;
								case 2 :
									dbg.enterAlt(2);
